--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: CI/CD Deploy via SSH
 
 on:
   push:
-    branches: [ main ]   # ganti kalau pakai branch lain
+    branches: [ main ]
 
 jobs:
   deploy:
@@ -11,11 +11,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Upload files to server
-        uses: appleboy/scp-action@v0.1.7
+        uses: appleboy/scp-action@v1
         with:
           host: ${{ secrets.DEPLOY_HOST }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -35,13 +33,12 @@ jobs:
             vendor
 
       - name: Run remote deploy steps
-        uses: appleboy/ssh-action@v0.1.11
+        uses: appleboy/ssh-action@v1
         with:
           host: ${{ secrets.DEPLOY_HOST }}
           username: ${{ secrets.DEPLOY_USER }}
           key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
           port: ${{ secrets.DEPLOY_PORT }}
-          script_stop: true
           script: |
             set -euo pipefail
             APP_DIR=/var/www/laravel
@@ -51,8 +48,9 @@ jobs:
             sudo chown -R "$USER":"$USER" "$APP_DIR"
 
             rsync -a --delete --exclude=".git" --exclude=".github" --exclude="node_modules" --exclude="vendor" "$STAGE"/ "$APP_DIR"/
-            cd "$APP_DIR"
 
+            cd "$APP_DIR"
+            command -v composer >/dev/null || { curl -sS https://getcomposer.org/installer | php && sudo mv composer.phar /usr/local/bin/composer && sudo chmod +x /usr/local/bin/composer; }
             composer install --no-interaction --prefer-dist --optimize-autoloader --no-dev
 
             [ -f .env ] || cp .env.example .env || true
