--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,31 +9,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Upload files to server
-        uses: appleboy/scp-action@v1
-        with:
-          host: ${{ secrets.DEPLOY_HOST }}
-          username: ${{ secrets.DEPLOY_USER }}
-          key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
-          port: ${{ secrets.DEPLOY_PORT }}
-          source: |
-            ./*
-            ./.env.example
-          target: /home/deploy/build
-          overwrite: true
-          rm: true
-          strip_components: 0
-          exclude: |
-            .git
-            .github
-            node_modules
-            vendor
-
-      - name: Run remote deploy steps
-        uses: appleboy/ssh-action@v1
+      - name: Deploy to Staging via SSH
+        uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.DEPLOY_HOST }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -42,15 +19,18 @@ jobs:
           script: |
             set -euo pipefail
             APP_DIR=/var/www/laravel
-            STAGE=/home/deploy/build
 
-            sudo mkdir -p "$APP_DIR"
-            sudo chown -R "$USER":"$USER" "$APP_DIR"
-
-            rsync -a --delete --exclude=".git" --exclude=".github" --exclude="node_modules" --exclude="vendor" "$STAGE"/ "$APP_DIR"/
+            # kalau folder belum ada, clone pertama kali
+            if [ ! -d "$APP_DIR/.git" ]; then
+              sudo mkdir -p "$APP_DIR"
+              sudo chown -R "$USER":"$USER" "$APP_DIR"
+              git clone https://github.com/khoirurrozikin86/needle.git "$APP_DIR"
+            fi
 
             cd "$APP_DIR"
-            command -v composer >/dev/null || { curl -sS https://getcomposer.org/installer | php && sudo mv composer.phar /usr/local/bin/composer && sudo chmod +x /usr/local/bin/composer; }
+            git fetch origin main
+            git reset --hard origin/main
+
             composer install --no-interaction --prefer-dist --optimize-autoloader --no-dev
 
             [ -f .env ] || cp .env.example .env || true
