--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD Deploy via SSH
+name: CI/CD Deploy via SSH (no sudo)
 
 on:
   push:
@@ -7,43 +7,61 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Deploy to Staging via SSH
+      - name: Deploy over SSH (no-sudo)
         uses: appleboy/ssh-action@v1.0.0
         with:
-          host: ${{ secrets.DEPLOY_HOST }}
-          username: ${{ secrets.DEPLOY_USER }}
+          host: ${{ secrets.DEPLOY_HOST }}     # 36.95.208.100
+          username: ${{ secrets.DEPLOY_USER }} # deploy
           key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
-          port: ${{ secrets.DEPLOY_PORT }}
+          port: ${{ secrets.DEPLOY_PORT }}     # 222
           script: |
             set -euo pipefail
-            APP_DIR=/var/www/laravel
 
-            # kalau folder belum ada, clone pertama kali
+            APP_DIR=/var/www/laravel
+            REPO_URL=https://github.com/khoirurrozikin86/needle.git
+            BRANCH=main
+
+            # siapkan folder (sudah dimiliki deploy dari step root)
+            mkdir -p "$APP_DIR"
+
+            # clone pertama kali
             if [ ! -d "$APP_DIR/.git" ]; then
-              su mkdir -p "$APP_DIR"
-              su chown -R "$USER":"$USER" "$APP_DIR"
-              git clone https://github.com/khoirurrozikin86/needle.git "$APP_DIR"
+              git clone "$REPO_URL" "$APP_DIR"
             fi
 
             cd "$APP_DIR"
-            git fetch origin main
-            git reset --hard origin/main
+
+            # hindari "dubious ownership" jika pernah ganti owner
+            git config --global --add safe.directory "$APP_DIR"
+
+            # update ke commit terbaru
+            git fetch origin "$BRANCH" --prune
+            git reset --hard "origin/$BRANCH"
+
+            # install composer ke HOME (tanpa sudo) bila belum ada
+            if ! command -v composer >/dev/null 2>&1; then
+              curl -sS https://getcomposer.org/installer | php
+              mkdir -p "$HOME/.local/bin"
+              mv composer.phar "$HOME/.local/bin/composer"
+              chmod +x "$HOME/.local/bin/composer"
+              echo 'export PATH="$HOME/.local/bin:$PATH"' >> "$HOME/.profile"
+              export PATH="$HOME/.local/bin:$PATH"
+            fi
 
             composer install --no-interaction --prefer-dist --optimize-autoloader --no-dev
 
+            # ENV & key (pertama kali saja)
             [ -f .env ] || cp .env.example .env || true
             php artisan key:generate || true
+
+            # migrasi (boleh dimatikan jika DB belum siap)
             php artisan migrate --force || true
 
+            # cache optimizations
             php artisan config:clear || true
             php artisan config:cache || true
             php artisan route:cache || true
             php artisan view:cache || true
 
-            su chown -R www-data:www-data "$APP_DIR"
-            su chmod -R 775 "$APP_DIR/storage" "$APP_DIR/bootstrap/cache"
-
-            su systemctl reload php8.2-fpm || true
-            su systemctl reload nginx || true
+            echo "Deploy selesai $(date)"
